--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -35,7 +35,7 @@ updates:
     schedule: # Create PRs during week-ends, they will be ready on monday morning
       interval: weekly
       day: sunday
-    versioning-strategy: increase
+    versioning-strategy: widen
     commit-message:
       prefix: '[dependabot][prod][npm] - '
       prefix-development: '[dependabot][dev][npm] - '
@@ -74,6 +74,12 @@ updates:
         patterns: ['*']
 # Split security updates by:
 #  - prod vs dev
+#  - Major prod updates vs other prod updates
+      SECURITY-prod-major:
+        applies-to: security-updates
+        dependency-type: production
+        update-types: ['major']
+        patterns: ['*']
       SECURITY-prod:
         applies-to: security-updates
         dependency-type: production
